Major change: Sweep object now return keys of all parameters. None values fill inn the blank. This is necessary if we want to use the data set class without making a custom runner.
Note: this has probebly broken all my tests. TODO: make these work again!

--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -29,25 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Printer:\n",
     "    def __init__(self, sweep_object): \n",
-    "        self._table_list = sweep_object.parameter_table.table_list\n",
-    "        \n",
-    "        self._ind = set([tpl for d in self._table_list for tpl in d[\"independent_parameters\"]])\n",
-    "        self._dep = set([tpl for d in self._table_list for tpl in d[\"dependent_parameters\"]])\n",
-    "        \n",
-    "        ind_names = list(zip(*self._ind))[0] if len(self._ind) else []\n",
-    "        dep_names = list(zip(*self._dep))[0] if len(self._dep) else []\n",
-    "        \n",
-    "        self._all_param_names = np.append(ind_names, dep_names)\n",
+    "        self._ind, self._dep = sweep_object.parameter_table.flatten()\n",
+    "        self._symbols_list = sweep_object.parameter_table.symbols_list()\n",
     "        \n",
     "    def __enter__(self): \n",
-    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind])\n",
-    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep])\n",
+    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind.items()])\n",
+    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep.items()])\n",
     "        sep = \" | \"\n",
     "        print((header_ind + sep + header_dep).strip(sep))\n",
     "        \n",
@@ -57,7 +50,7 @@
     "        pass\n",
     "\n",
     "    def __call__(self, result):\n",
-    "        print(\" \" + \"\\t \".join(list([str(result.get(ip, \"None\")) for ip in self._all_param_names])))"
+    "        print(\" \" + \"\\t \".join([str(result[ip]) for ip in self._symbols_list]))"
    ]
   },
   {
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,85 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y [V]\tx [V] | n [A]\tm [A]\n",
-      " 0\t 0\t 16\t 0\n",
-      " 0\t 1\t 17\t 1\n",
-      " 0\t 2\t 18\t 4\n",
-      " 1\t 0\t 15\t 1\n",
-      " 1\t 1\t 16\t 2\n",
-      " 1\t 2\t 17\t 5\n",
-      " 3\t 0\t 7\t 3\n",
-      " 3\t 1\t 8\t 4\n",
-      " 3\t 2\t 9\t 7\n",
-      " 4\t 0\t 0\t 4\n",
-      " 4\t 1\t 1\t 5\n",
-      " 4\t 2\t 2\t 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "with Printer(sweep_object) as printer:\n",
-    "    for i in  sweep_object: \n",
-    "        printer(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = ManualParameter(\"n\", unit=\"A\")\n",
-    "n.get = lambda: x() - y() ** 2 + 16\n",
-    "\n",
-    "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
-    "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
-    "meas1 = ParameterWrapper(m)\n",
-    "meas2 = ParameterWrapper(n)\n",
-    "sweep_object =  Nest([soy, sox, Chain([meas1, meas2])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y [V]\tx [V] | n [A]\tm [A]\n",
-      " 0\t 0\t None\t 0\n",
-      " 0\t 0\t 16\t None\n",
-      " 0\t 1\t None\t 1\n",
-      " 0\t 1\t 17\t None\n",
-      " 0\t 2\t None\t 4\n",
-      " 0\t 2\t 18\t None\n",
-      " 1\t 0\t None\t 1\n",
-      " 1\t 0\t 15\t None\n",
-      " 1\t 1\t None\t 2\n",
-      " 1\t 1\t 16\t None\n",
-      " 1\t 2\t None\t 5\n",
-      " 1\t 2\t 17\t None\n",
-      " 3\t 0\t None\t 3\n",
-      " 3\t 0\t 7\t None\n",
-      " 3\t 1\t None\t 4\n",
-      " 3\t 1\t 8\t None\n",
-      " 3\t 2\t None\t 7\n",
-      " 3\t 2\t 9\t None\n",
-      " 4\t 0\t None\t 4\n",
-      " 4\t 0\t 0\t None\n",
-      " 4\t 1\t None\t 5\n",
-      " 4\t 1\t 1\t None\n",
-      " 4\t 2\t None\t 8\n",
-      " 4\t 2\t 2\t None\n"
+      "y [V]\tx [V] | m [A]\tn [A]\n",
+      " 0\t 0\t 0\t 16\n",
+      " 0\t 1\t 1\t 17\n",
+      " 0\t 2\t 4\t 18\n",
+      " 1\t 0\t 1\t 15\n",
+      " 1\t 1\t 2\t 16\n",
+      " 1\t 2\t 5\t 17\n",
+      " 3\t 0\t 3\t 7\n",
+      " 3\t 1\t 4\t 8\n",
+      " 3\t 2\t 7\t 9\n",
+      " 4\t 0\t 4\t 0\n",
+      " 4\t 1\t 5\t 1\n",
+      " 4\t 2\t 8\t 2\n"
      ]
     }
    ],
@@ -438,30 +372,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y [V]\tx [V] | n [A]\tm [A]\n",
-      " 0\t None\t None\t 16\n",
-      " 0\t 0\t 16\t None\n",
-      " 0\t 1\t 17\t None\n",
-      " 0\t 2\t 18\t None\n",
-      " 1\t None\t None\t 5\n",
-      " 1\t 0\t 15\t None\n",
-      " 1\t 1\t 16\t None\n",
-      " 1\t 2\t 17\t None\n",
-      " 3\t None\t None\t 7\n",
-      " 3\t 0\t 7\t None\n",
-      " 3\t 1\t 8\t None\n",
-      " 3\t 2\t 9\t None\n",
-      " 4\t None\t None\t 8\n",
-      " 4\t 0\t 0\t None\n",
-      " 4\t 1\t 1\t None\n",
-      " 4\t 2\t 2\t None\n"
+      "y [V]\tx [V] | m [A]\tn [A]\n",
+      " 0\t None\t 16\t None\n",
+      " 0\t 0\t None\t 16\n",
+      " 0\t 1\t None\t 17\n",
+      " 0\t 2\t None\t 18\n",
+      " 1\t None\t 5\t None\n",
+      " 1\t 0\t None\t 15\n",
+      " 1\t 1\t None\t 16\n",
+      " 1\t 2\t None\t 17\n",
+      " 3\t None\t 7\t None\n",
+      " 3\t 0\t None\t 7\n",
+      " 3\t 1\t None\t 8\n",
+      " 3\t 2\t None\t 9\n",
+      " 4\t None\t 8\t None\n",
+      " 4\t 0\t None\t 0\n",
+      " 4\t 1\t None\t 1\n",
+      " 4\t 2\t None\t 2\n"
      ]
     }
    ],
@@ -496,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -515,10 +449,10 @@
      "output_type": "stream",
      "text": [
       "x [V] | meas3 [H]\n",
-      " 0\t -0.6\n",
-      " 1\t 0.0\n",
-      " 2\t -0.8\n",
-      " 3\t -0.9\n"
+      " 0\t -1.2\n",
+      " 1\t -1.6\n",
+      " 2\t -1.3\n",
+      " 3\t 1.1\n"
      ]
     }
    ],
@@ -532,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,18 +479,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [V] | m4 [H]\tm3 [H]\n",
-      " 0\t -5.9\t -0.6\n",
-      " 1\t -5.8\t 0.9\n",
-      " 2\t -6.7\t -0.5\n",
-      " 3\t -5.1\t 1.1\n"
+      "x [V] | m3 [H]\tm4 [H]\n",
+      " 0\t -0.8\t -6.0\n",
+      " 1\t 1.5\t -4.7\n",
+      " 2\t -1.9\t -5.0\n",
+      " 3\t -0.9\t -5.7\n"
      ]
     }
    ],
@@ -577,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,18 +526,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xs [V] | m4 [H]\tm3 [H]\n",
-      " 0\t -5.5\t 0.5\n",
-      " 1\t -5.2\t 2.1\n",
-      " 2\t -5.7\t 1.0\n",
-      " 3\t -3.0\t -0.2\n"
+      "xs [V] | m3 [H]\tm4 [H]\n",
+      " 0\t 0.4\t -5.5\n",
+      " 1\t -0.2\t -5.7\n",
+      " 2\t 0.8\t -5.9\n",
+      " 3\t -0.9\t -5.1\n"
      ]
     }
    ],
@@ -617,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,18 +563,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xs [V]\tys [V] | m4 [H]\tm3 [H]\n",
-      " 0\t 4\t -5.7\t -0.8\n",
-      " 1\t 5\t -3.1\t 0.9\n",
-      " 2\t 7\t -4.3\t 1.2\n",
-      " 3\t 8\t -5.6\t -1.0\n"
+      "xs [V]\tys [V] | m3 [H]\tm4 [H]\n",
+      " 0\t 4\t -1.4\t -4.9\n",
+      " 1\t 5\t -0.5\t -4.9\n",
+      " 2\t 7\t 0.9\t -6.0\n",
+      " 3\t 8\t -0.2\t -5.4\n"
      ]
     }
    ],
