--- a/docs/examples/sweep/convenience_functions.ipynb
+++ b/docs/examples/sweep/convenience_functions.ipynb
@@ -28,25 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Printer:\n",
     "    def __init__(self, sweep_object): \n",
-    "        self._table_list = sweep_object.parameter_table.table_list\n",
-    "        \n",
-    "        self._ind = set([tpl for d in self._table_list for tpl in d[\"independent_parameters\"]])\n",
-    "        self._dep = set([tpl for d in self._table_list for tpl in d[\"dependent_parameters\"]])\n",
-    "        \n",
-    "        ind_names = list(zip(*self._ind))[0] if len(self._ind) else []\n",
-    "        dep_names = list(zip(*self._dep))[0] if len(self._dep) else []\n",
-    "        \n",
-    "        self._all_param_names = np.append(ind_names, dep_names)\n",
+    "        self._ind, self._dep = sweep_object.parameter_table.flatten()\n",
+    "        self._symbols_list = sweep_object.parameter_table.symbols_list()\n",
     "        \n",
     "    def __enter__(self): \n",
-    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind])\n",
-    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep])\n",
+    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind.items()])\n",
+    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep.items()])\n",
     "        sep = \" | \"\n",
     "        print((header_ind + sep + header_dep).strip(sep))\n",
     "        \n",
@@ -56,12 +49,12 @@
     "        pass\n",
     "\n",
     "    def __call__(self, result):\n",
-    "        print(\" \" + \"\\t \".join(list([str(result.get(ip, \"None\")) for ip in self._all_param_names])))"
+    "        print(\" \" + \"\\t \".join([str(result[ip]) for ip in self._symbols_list]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,26 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [V]\ty [V] | m [A]\tm4 [H]\tm3 [H]\n",
+      "x [V]\ty [V] | m [A]\tm3 [H]\tm4 [H]\n",
       " 0\t None\t 0\t None\t None\n",
-      " 0\t 0\t None\t -4.2\t 0.4\n",
-      " 0\t 1\t None\t -4.7\t -0.5\n",
-      " 0\t 2\t None\t -4.4\t -1.8\n",
+      " 0\t 0\t None\t 1.8\t -3.8\n",
+      " 0\t 1\t None\t -0.1\t -4.6\n",
+      " 0\t 2\t None\t -1.9\t -5.6\n",
       " 1\t None\t 1\t None\t None\n",
-      " 1\t 0\t None\t -4.5\t -0.1\n",
-      " 1\t 1\t None\t -3.9\t 1.3\n",
-      " 1\t 2\t None\t -3.8\t -0.4\n",
+      " 1\t 0\t None\t -1.4\t -3.5\n",
+      " 1\t 1\t None\t -0.3\t -5.1\n",
+      " 1\t 2\t None\t 0.0\t -4.9\n",
       " 2\t None\t 4\t None\t None\n",
-      " 2\t 0\t None\t -4.0\t 0.5\n",
-      " 2\t 1\t None\t -6.8\t -0.4\n",
-      " 2\t 2\t None\t -2.6\t 0.4\n"
+      " 2\t 0\t None\t 0.4\t -4.7\n",
+      " 2\t 1\t None\t -0.5\t -6.3\n",
+      " 2\t 2\t None\t 2.4\t -5.5\n"
      ]
     }
    ],
