1) Added better explanation in notebooks 2) Referring to notebooks in docstrings.

--- a/docs/examples/sweep/convenience_functions.ipynb
+++ b/docs/examples/sweep/convenience_functions.ipynb
@@ -19,11 +19,13 @@
     "sys.path.append(r\"C:\\Users\\a-sochat\\development\\Qcodes_Sohail_Clone\\Qcodes\")\n",
     "\n",
     "import numpy as np\n",
+    "import time \n",
     "\n",
     "import qcodes as qc\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
     "\n",
-    "from qcodes.sweep import sweep, nest, chain, measurement, setter"
+    "from qcodes.sweep import sweep, nest, chain, szip, measurement, setter\n",
+    "from qcodes.sweep.sweep import BaseSweepObject, ParametersTable, wrap_objects, time_trace"
    ]
   },
   {
@@ -144,23 +146,119 @@
      "text": [
       "x [V]\ty [V] | m [A]\tm3 [H]\tm4 [H]\n",
       " 0\t None\t 0\t None\t None\n",
-      " 0\t 0\t None\t -0.1\t -6.8\n",
-      " 0\t 1\t None\t 1.1\t -6.4\n",
-      " 0\t 2\t None\t 0.0\t -4.7\n",
+      " 0\t 0\t None\t -0.3\t -5.6\n",
+      " 0\t 1\t None\t 0.0\t -3.8\n",
+      " 0\t 2\t None\t 2.4\t -4.8\n",
       " 1\t None\t 1\t None\t None\n",
-      " 1\t 0\t None\t 0.8\t -4.5\n",
-      " 1\t 1\t None\t 1.1\t -5.4\n",
-      " 1\t 2\t None\t 0.5\t -4.8\n",
+      " 1\t 0\t None\t 1.7\t -4.6\n",
+      " 1\t 1\t None\t -1.1\t -3.8\n",
+      " 1\t 2\t None\t -0.3\t -5.6\n",
       " 2\t None\t 4\t None\t None\n",
-      " 2\t 0\t None\t 0.2\t -4.0\n",
-      " 2\t 1\t None\t 1.8\t -4.8\n",
-      " 2\t 2\t None\t 0.0\t -4.6\n"
+      " 2\t 0\t None\t -0.9\t -4.2\n",
+      " 2\t 1\t None\t -0.2\t -3.5\n",
+      " 2\t 2\t None\t 1.7\t -4.0\n"
      ]
     }
    ],
    "source": [
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object:   \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TimeStamps(BaseSweepObject): \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self._parameter_table = ParametersTable(dependent_parameters=[(\"time\", \"s\")])\n",
+    "        \n",
+    "    def _setter_factory(self): \n",
+    "        t0 = time.time()\n",
+    "        while True: \n",
+    "            t = time.time() - t0\n",
+    "            yield {\"time\": \"{:.3e}\".format(t)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_object2 = szip(TimeStamps(), sweep_object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]\ty [V] | time [s]\tm [A]\tm3 [H]\tm4 [H]\n",
+      " 0\t None\t 0.000e+00\t 0\t None\t None\n",
+      " 0\t 0\t 0.000e+00\t None\t -0.1\t -3.2\n",
+      " 0\t 1\t 9.992e-04\t None\t 0.2\t -3.5\n",
+      " 0\t 2\t 9.992e-04\t None\t 1.7\t -3.5\n",
+      " 1\t None\t 9.992e-04\t 1\t None\t None\n",
+      " 1\t 0\t 2.001e-03\t None\t -2.0\t -3.1\n",
+      " 1\t 1\t 2.001e-03\t None\t -0.2\t -3.0\n",
+      " 1\t 2\t 2.001e-03\t None\t 2.0\t -5.4\n",
+      " 2\t None\t 2.001e-03\t 4\t None\t None\n",
+      " 2\t 0\t 2.001e-03\t None\t -0.1\t -4.5\n",
+      " 2\t 1\t 2.001e-03\t None\t -0.7\t -5.4\n",
+      " 2\t 2\t 3.000e-03\t None\t 1.6\t -5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Printer(sweep_object2) as printer:\n",
+    "    for i in sweep_object2:   \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_object3 = time_trace(m, 5, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time [s] | m [A]\n",
+      " 0.0\t 4\n",
+      " 0.5007941722869873\t 4\n",
+      " 1.0013322830200195\t 4\n",
+      " 1.501396894454956\t 4\n",
+      " 2.0023789405822754\t 4\n",
+      " 2.504150390625\t 4\n",
+      " 3.005115270614624\t 4\n",
+      " 3.5068256855010986\t 4\n",
+      " 4.007554292678833\t 4\n",
+      " 4.509374618530273\t 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Printer(sweep_object3) as printer:\n",
+    "    for i in sweep_object3:   \n",
     "        printer(i)"
    ]
   },
