--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook introduces the sweep classes. \n",
+    "\n",
+    "It is important to note that there are convenience functions which allow us to be more succinct when defining sweeps. Please see: \n",
+    "\n",
+    "https://github.com/sohailc/Qcodes/blob/sweep_integration/docs/examples/sweep/convenience_functions.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -29,10 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "We will first make a measurement-like class which, instead of saving results to file prints them to standard output\n",
+    "\"\"\"\n",
+    "\n",
     "class Printer:\n",
     "    def __init__(self, sweep_object): \n",
     "        self._ind, self._dep = sweep_object.parameter_table.flatten()\n",
@@ -62,16 +77,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]|\n"
+     ]
+    }
+   ],
    "source": [
-    "x = ManualParameter(\"x\", unit=\"V\")"
+    "x = ManualParameter(\"x\", unit=\"V\")\n",
+    "sweep_object = ParameterSweep(x, lambda: [0, 1])\n",
+    "\n",
+    "# Lets print the parameter table...\n",
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Everything in front of the \"|\" represents an indendent parameter. We see that the sweep only defines one parameter, which is independent and has a unit \"V\". Lets sweep this sweep object..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +119,6 @@
     }
    ],
    "source": [
-    "sweep_object = ParameterSweep(x, lambda: [0, 1])\n",
-    "\n",
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object: \n",
     "        printer(i)"
@@ -108,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,18 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V],x [V]|\n"
+     ]
+    }
+   ],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1])\n",
     "soy = ParameterSweep(y, lambda: [0, 1])\n",
-    "sweep_object = Nest([soy, sox])"
+    "sweep_object = Nest([soy, sox])\n",
+    "\n",
+    "# Lets print the parameter table...\n",
+    "print(sweep_object.parameter_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +217,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z [V],y [V],x [V]|\n"
+     ]
+    }
+   ],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1])\n",
     "soy = ParameterSweep(y, lambda: [0, 1])\n",
     "soz = ParameterSweep(z, lambda: [0, 1])\n",
-    "sweep_object = Nest([soz, soy, sox])"
+    "sweep_object = Nest([soz, soy, sox])\n",
+    "\n",
+    "# Lets print the parameter table...\n",
+    "print(sweep_object.parameter_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +291,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|m [A]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x(3)\n",
+    "y(1)\n",
+    "sweep_object = ParameterWrapper(m)\n",
+    "\n",
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Everything after the \"|\" represents a dependent parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -250,10 +332,6 @@
     }
    ],
    "source": [
-    "x(3)\n",
-    "y(1)\n",
-    "sweep_object = ParameterWrapper(m)\n",
-    "\n",
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object: \n",
     "        printer(i)"
@@ -268,19 +346,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V],x [V]|m [A]\n"
+     ]
+    }
+   ],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
     "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
     "meas = ParameterWrapper(m)\n",
-    "sweep_object =  Nest([soy, sox, meas])"
+    "sweep_object =  Nest([soy, sox, meas])\n",
+    "\n",
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nesting sweep objects will combine the parameters table. This is how we keep track of the fact that the sweep defines three parameters, \"x\", \"y\" and \"m\", the latter of which is a dependent parameter which depends on the former two. When we register the sweep object with the measurement class, we now know which ParamSpecs we need to make  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -313,14 +408,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see a seperator \"|\" before \"m\" in the header. This means that \"m\" is a dependent parameter, depending on both \"x\" and \"y\". In fact, everything after the \"|\" seperator is a dependent parameter"
+    "Lets make another example with two dependent parameters...."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V],x [V]|m [A],n [A]\n"
+     ]
+    }
+   ],
    "source": [
     "n = ManualParameter(\"n\", unit=\"A\")\n",
     "n.get = lambda: x() - y() ** 2 + 16\n",
@@ -329,12 +432,14 @@
     "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
     "meas1 = ParameterWrapper(m)\n",
     "meas2 = ParameterWrapper(n)\n",
-    "sweep_object =  Nest([soy, sox, meas1, meas2])"
+    "sweep_object =  Nest([soy, sox, meas1, meas2])\n",
+    "\n",
+    "print(sweep_object.parameter_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +477,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x(4)\n",
+    "sweep_object = Nest([\n",
+    "    soy, \n",
+    "    Chain([\n",
+    "        meas1, \n",
+    "        Nest([sox, meas2])\n",
+    "    ])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above is equivalent to...\n",
+    "\n",
+    "```python\n",
+    "for y in [0, 1, 3, 4]: \n",
+    "    meas1()\n",
+    "    for x in [0, 1, 2]: \n",
+    "        meas2()\n",
+    "```\n",
+    "\n",
+    "Note that in the notebook: \n",
+    "https://github.com/sohailc/Qcodes/blob/sweep_integration/docs/examples/sweep/convenience_functions.ipynb\n",
+    "\n",
+    "We see another way we can define the same thing through convenience functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V]|m [A]\n",
+      "y [V],x [V]|n [A]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we have two dependent parameters: \"m\" and \"n\". The former depends on \"y\" only while the latter depends on \"x\" and \"y\". This is the reason why sweep_object.parameter_table.table_list is a *list* of dictionaries. Let us view the result of this sweep object  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -400,25 +565,9 @@
     }
    ],
    "source": [
-    "x(4)\n",
-    "sweep_object = Nest([\n",
-    "    soy, \n",
-    "    Chain([\n",
-    "        meas1, \n",
-    "        Nest([sox, meas2])\n",
-    "    ])\n",
-    "])\n",
-    "\n",
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object: \n",
     "        printer(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have woven together a 1D and 2D loop. Notice that we immediately see that \"m\" only depends on y and \"n\" depends on x and y. There is no need to explicitly state this. With will become important when we discuss data sets. The above sweep is equivalent to..."
    ]
   },
   {
@@ -430,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +590,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]|meas3 [H]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -449,16 +616,14 @@
      "output_type": "stream",
      "text": [
       "x [V] | meas3 [H]\n",
-      " 0\t -1.2\n",
-      " 1\t -1.6\n",
-      " 2\t -1.3\n",
-      " 3\t 1.1\n"
+      " 0\t 0.5\n",
+      " 1\t 0.5\n",
+      " 2\t -0.3\n",
+      " 3\t 1.0\n"
      ]
     }
    ],
    "source": [
-    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
-    "\n",
     "with Printer(sweep_object) as printer: \n",
     "    for i in sweep_object: \n",
     "        printer(i)"
@@ -466,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +644,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]|m3 [H],m4 [H]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
+    "\n",
+    "print(sweep_object.parameter_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -487,16 +671,14 @@
      "output_type": "stream",
      "text": [
       "x [V] | m3 [H]\tm4 [H]\n",
-      " 0\t -0.8\t -6.0\n",
-      " 1\t 1.5\t -4.7\n",
-      " 2\t -1.9\t -5.0\n",
-      " 3\t -0.9\t -5.7\n"
+      " 0\t -1.3\t -6.1\n",
+      " 1\t 0.3\t -3.9\n",
+      " 2\t 1.8\t -4.5\n",
+      " 3\t 0.4\t -5.7\n"
      ]
     }
    ],
    "source": [
-    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
-    "\n",
     "with Printer(sweep_object) as printer: \n",
     "    for i in sweep_object: \n",
     "        printer(i)"
@@ -598,37 +780,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Measurement:\n",
-    "    def __init__(self): \n",
-    "        self._value = self._roll_dice()\n",
-    "    def __call__(self): \n",
-    "        self._value = self._roll_dice()\n",
-    "        return {\"measurement\": {\"unit\": \"H\", \"value\": self._value, \"independent_parameter\": False}}\n",
-    "    def _roll_dice(self): \n",
-    "        return np.random.normal(0, 1, (3,))\n",
-    "    def value(self): \n",
-    "        return self._value\n",
-    "\n",
-    "measurement_function = Measurement()\n",
-    "\n",
-    "# By allowing the sweep values to be a generator, we can create a feed-back loop between the sweep object and the \n",
-    "# measurement.\n",
-    "\n",
     "def sweep_values(): \n",
     "    value = 0.0\n",
     "    while value < 2.0:\n",
-    "        yield value \n",
-    "        value = np.sum(measurement_function.value())  # The next step depends on the measurement\n",
+    "        value = np.sum(np.random.normal(0, 1, (3,)))\n",
+    "        yield value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43508727435185546\n",
+      "-0.9810567871821754\n",
+      "0.5366477121615955\n",
+      "1.3301845095789553\n",
+      "1.1557474282909834\n",
+      "1.5900065293713674\n",
+      "2.0995286704840814\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_object = ParameterSweep(x, sweep_values)\n",
     "\n",
-    "def setter(value): \n",
-    "    return {\"dac_channel\": {\"unit\": \"H\", \"value\": \"{:.3}\".format(value), \"independent_parameter\": True}}\n",
-    "\n",
-    "for i in Nest([FunctionSweep(setter, sweep_values), FunctionWrapper(measurement_function)]): \n",
-    "    pretty_print(i)"
+    "for i in sweep_object: \n",
+    "    print(x())"
    ]
   },
   {
@@ -640,9 +826,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.993605115907274"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def f(ni): # The probability of looping exactly ni times \n",
     "    p = 0.1251\n",
@@ -660,14 +857,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.9593\n"
+     ]
+    }
+   ],
    "source": [
     "count = 0\n",
     "N = 10000\n",
     "for _ in range(N):\n",
-    "    count += len(list(Nest([FunctionSweep(setter, sweep_values), FunctionWrapper(measurement_function)])))\n",
+    "    count += len(list(sweep_object))  # unroll the sweep object by recasting it to a list\n",
     "\n",
     "print(count/N)"
    ]
@@ -676,7 +881,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":-)"
+    "Yayyy!! :-)\n",
+    "\n",
+    "The ability to use generators as values we sweep over gives us the ability to create complex loops with feedback mechanisms. See for example: \n",
+    "\n",
+    "https://github.com/sohailc/Qcodes/blob/sweep_integration/docs/examples/DataSet/sweep/example_measurement_with_sweep.ipynb"
    ]
   },
   {
