1) Improved code formatting 2) Better explanation in notebook

--- a/docs/examples/sweep/convenience_functions.ipynb
+++ b/docs/examples/sweep/convenience_functions.ipynb
@@ -25,12 +25,16 @@
     "from qcodes.instrument.parameter import ManualParameter\n",
     "\n",
     "from qcodes.sweep import sweep, nest, chain, szip, measurement, setter\n",
-    "from qcodes.sweep.sweep import BaseSweepObject, ParametersTable, wrap_objects, time_trace"
+    "from qcodes.sweep.sweep import BaseSweepObject, ParametersTable, wrap_objects, time_trace\n",
+    "\n",
+    "from qcodes.sweep.sweep import (\n",
+    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, measurement, setter\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,57 +59,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets define some parameters and functions to sweep over"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = ManualParameter(\"x\", unit=\"V\")\n",
-    "y = ManualParameter(\"y\", unit=\"V\")\n",
+    "yparam = ManualParameter(\"y\", unit=\"V\")\n",
+    "\n",
+    "@setter([(\"y\", \"mV\")]) # We are given mV in loops \n",
+    "def ysetter(y):\n",
+    "    yv = y / 1000\n",
+    "    yparam.set(yv)\n",
+    "    return yv\n",
     "\n",
     "m = ManualParameter(\"m\", unit=\"A\")\n",
     "m.get = lambda: x() ** 2\n",
     "\n",
     "n = ManualParameter(\"n\", unit=\"A\")\n",
-    "n.get = lambda: x() - y() ** 2 + 16\n",
-    "\n",
-    "sweep_object = sweep(x, [0, 1, 2])(\n",
-    "    m,\n",
-    "    sweep(y, [0, 1, 2])(\n",
-    "        n  \n",
-    "    )\n",
-    ")"
+    "n.get = lambda: x() - yparam() ** 2 + 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convinience functions and other [syntactic sugar](https://en.wikipedia.org/wiki/Syntactic_sugar) has been developed to simplify writing complext loops. The following sweep objects as equivalent: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [V]\ty [V] | m [A]\tn [A]\n",
+      "x [V]\ty [mV] | m [A]\tn [A]\n",
       " 0\t None\t 0\t None\n",
-      " 0\t 0\t None\t 16\n",
-      " 0\t 1\t None\t 15\n",
-      " 0\t 2\t None\t 12\n",
+      " 0\t 0\t None\t 16.0\n",
+      " 0\t 1000\t None\t 15.0\n",
+      " 0\t 2000\t None\t 12.0\n",
       " 1\t None\t 1\t None\n",
-      " 1\t 0\t None\t 17\n",
-      " 1\t 1\t None\t 16\n",
-      " 1\t 2\t None\t 13\n",
+      " 1\t 0\t None\t 17.0\n",
+      " 1\t 1000\t None\t 16.0\n",
+      " 1\t 2000\t None\t 13.0\n",
       " 2\t None\t 4\t None\n",
-      " 2\t 0\t None\t 18\n",
-      " 2\t 1\t None\t 17\n",
-      " 2\t 2\t None\t 14\n"
+      " 2\t 0\t None\t 18.0\n",
+      " 2\t 1000\t None\t 17.0\n",
+      " 2\t 2000\t None\t 14.0\n"
      ]
     }
    ],
    "source": [
+    "# Can someone understand what the hell this means? \n",
+    "sweep_object_1 = Nest([\n",
+    "    ParameterSweep(x, lambda: [0, 1, 2]), \n",
+    "    Chain([\n",
+    "        ParameterWrapper(m), \n",
+    "        Nest([\n",
+    "            FunctionSweep(ysetter, lambda: [0, 1000, 2000]), \n",
+    "            ParameterWrapper(n)\n",
+    "        ])\n",
+    "    ])\n",
+    "])\n",
+    "# Lets unloop to see what it does \n",
+    "with Printer(sweep_object_1) as printer:\n",
+    "    for i in sweep_object_1:   \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]\ty [mV] | m [A]\tn [A]\n",
+      " 0\t None\t 0\t None\n",
+      " 0\t 0\t None\t 16.0\n",
+      " 0\t 1000\t None\t 15.0\n",
+      " 0\t 2000\t None\t 12.0\n",
+      " 1\t None\t 1\t None\n",
+      " 1\t 0\t None\t 17.0\n",
+      " 1\t 1000\t None\t 16.0\n",
+      " 1\t 2000\t None\t 13.0\n",
+      " 2\t None\t 4\t None\n",
+      " 2\t 0\t None\t 18.0\n",
+      " 2\t 1000\t None\t 17.0\n",
+      " 2\t 2000\t None\t 14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets write the same thing in a slightly more convinient way \n",
+    "sweep_object_2 = nest(\n",
+    "    sweep(x, [0, 1, 2]), \n",
+    "    chain(\n",
+    "        m, \n",
+    "        nest(\n",
+    "            sweep(ysetter, [0, 1000, 2000]), \n",
+    "            n\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Lets unloop to see what it does \n",
+    "with Printer(sweep_object_2) as printer:\n",
+    "    for i in sweep_object_2:   \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### what we lean: \n",
+    "1) The function sweep (with small \"s\") either returns a Parameter sweep or a Function sweep class depending on the argument types\n",
+    "\n",
+    "2) The range argument for the *classes* Parameter sweep and Function sweep are lambda functions, while for the sweep *function* this can be a simple list or numpy array (or infact any other iterable such as a generator)\n",
+    "\n",
+    "3) The arguments to the Nest and Chain classes are lists, while for the nest and chain functions are function arguments\n",
+    "\n",
+    "4) While the Parameter sweep and Function sweep classes expect arguments of qcodes parameter type and callables to be wrapped by ParameterWrapper and FunctionWrapper respectively, the sweep functions wraps these automatically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]\ty [mV] | m [A]\tn [A]\n",
+      " 0\t None\t 0\t None\n",
+      " 0\t 0\t None\t 16.0\n",
+      " 0\t 1000\t None\t 15.0\n",
+      " 0\t 2000\t None\t 12.0\n",
+      " 1\t None\t 1\t None\n",
+      " 1\t 0\t None\t 17.0\n",
+      " 1\t 1000\t None\t 16.0\n",
+      " 1\t 2000\t None\t 13.0\n",
+      " 2\t None\t 4\t None\n",
+      " 2\t 0\t None\t 18.0\n",
+      " 2\t 1000\t None\t 17.0\n",
+      " 2\t 2000\t None\t 14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finally, we can also just write...\n",
+    "sweep_object = sweep(x, [0, 1, 2])(\n",
+    "    m,\n",
+    "    sweep(ysetter, [0, 1000, 2000])(\n",
+    "        n  \n",
+    "    )\n",
+    ")\n",
+    "\n",
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object:   \n",
     "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### what we lean: \n",
+    "1) A sweep object is callable. We have the following rule: `sweep_object(m)` is the same as `nest(sweep_object, m)`. This saves us from writing \"nest\".\n",
+    "\n",
+    "2) Furthermore, `sweep_object(m, n)` is the same as `nest(sweep_object, chain(m, n))`. Implicit chaining reduces the bracket level and saves us from writing \"chain\". "
    ]
   },
   {
