--- a/docs/examples/sweep/convenience_functions.ipynb
+++ b/docs/examples/sweep/convenience_functions.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,11 +42,14 @@
     "    def __init__(self, sweep_object): \n",
     "        self._ind, self._dep = sweep_object.parameter_table.flatten()\n",
     "        self._symbols_list = sweep_object.parameter_table.symbols_list()\n",
+    "        self._inferred_symbols_list = sweep_object.parameter_table.inferred_symbols_list()\n",
     "        \n",
     "    def __enter__(self): \n",
     "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind.items()])\n",
     "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep.items()])\n",
     "        sep = \" | \"\n",
+    "        \n",
+    "        print(self._inferred_symbols_list)\n",
     "        print((header_ind + sep + header_dep).strip(sep))\n",
     "        \n",
     "        return self\n",
@@ -67,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = ManualParameter(\"x\", unit=\"V\")\n",
     "yparam = ManualParameter(\"y\", unit=\"V\")\n",
     "\n",
-    "@setter([(\"y\", \"mV\")]) # We are given mV in loops \n",
+    "@setter([(\"y\", \"mV\")], inferred_parameters=[(\"yv\", \"V\")]) # We are given mV in loops \n",
     "def ysetter(y):\n",
     "    yv = y / 1000\n",
     "    yparam.set(yv)\n",
@@ -96,26 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [V]\ty [mV] | m [A]\tn [A]\n",
-      " 0\t None\t 0\t None\n",
-      " 0\t 0\t None\t 16.0\n",
-      " 0\t 1000\t None\t 15.0\n",
-      " 0\t 2000\t None\t 12.0\n",
-      " 1\t None\t 1\t None\n",
-      " 1\t 0\t None\t 17.0\n",
-      " 1\t 1000\t None\t 16.0\n",
-      " 1\t 2000\t None\t 13.0\n",
-      " 2\t None\t 4\t None\n",
-      " 2\t 0\t None\t 18.0\n",
-      " 2\t 1000\t None\t 17.0\n",
-      " 2\t 2000\t None\t 14.0\n"
+      "yv inferred from y\n",
+      "x [V]\ty [mV]\tyv [V] | m [A]\tn [A]\n",
+      " 0\t None\t None\t 0\t None\n",
+      " 0\t 0.0\t 0.0\t None\t 16.0\n",
+      " 0\t 1000.0\t 1.0\t None\t 15.0\n",
+      " 0\t 2000.0\t 2.0\t None\t 12.0\n",
+      " 1\t None\t None\t 1\t None\n",
+      " 1\t 0.0\t 0.0\t None\t 17.0\n",
+      " 1\t 1000.0\t 1.0\t None\t 16.0\n",
+      " 1\t 2000.0\t 2.0\t None\t 13.0\n",
+      " 2\t None\t None\t 4\t None\n",
+      " 2\t 0.0\t 0.0\t None\t 18.0\n",
+      " 2\t 1000.0\t 1.0\t None\t 17.0\n",
+      " 2\t 2000.0\t 2.0\t None\t 14.0\n"
      ]
     }
    ],
@@ -139,7 +143,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "yv inferred from y\n",
+       "x [V]|m [A]\n",
+       "x [V],y [mV],yv [V]|n [A]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sweep_object_1._parameter_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,13 +285,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "sweep_object = sweep(x, [0, 1, 2])(\n",
     "    m,\n",
-    "    sweep(y, [0, 1, 2])(\n",
+    "    sweep(ysetter, [0, 1, 2])(\n",
     "        measurement_function  \n",
     "    )\n",
     ")"
@@ -273,26 +299,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x [V]\ty [V] | m [A]\tm3 [H]\tm4 [H]\n",
+      "x [V]\ty [mV] | m [A]\tm3 [H]\tm4 [H]\n",
       " 0\t None\t 0\t None\t None\n",
-      " 0\t 0\t None\t -0.3\t -5.6\n",
-      " 0\t 1\t None\t 0.0\t -3.8\n",
-      " 0\t 2\t None\t 2.4\t -4.8\n",
+      " 0\t 0\t None\t 0.1\t -4.5\n",
+      " 0\t 1\t None\t -0.2\t -4.5\n",
+      " 0\t 2\t None\t -1.0\t -4.9\n",
       " 1\t None\t 1\t None\t None\n",
-      " 1\t 0\t None\t 1.7\t -4.6\n",
-      " 1\t 1\t None\t -1.1\t -3.8\n",
-      " 1\t 2\t None\t -0.3\t -5.6\n",
+      " 1\t 0\t None\t 0.5\t -2.7\n",
+      " 1\t 1\t None\t 0.4\t -5.8\n",
+      " 1\t 2\t None\t -0.4\t -5.2\n",
       " 2\t None\t 4\t None\t None\n",
-      " 2\t 0\t None\t -0.9\t -4.2\n",
-      " 2\t 1\t None\t -0.2\t -3.5\n",
-      " 2\t 2\t None\t 1.7\t -4.0\n"
+      " 2\t 0\t None\t 0.3\t -5.0\n",
+      " 2\t 1\t None\t 1.3\t -4.4\n",
+      " 2\t 2\t None\t 1.0\t -6.4\n"
      ]
     }
    ],
@@ -396,6 +422,33 @@
     "with Printer(sweep_object3) as printer:\n",
     "    for i in sweep_object3:   \n",
     "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(*a))"
    ]
   },
   {
